--- a/rebel-test/scss/UpdatePopUp.module.scss
+++ b/rebel-test/scss/UpdatePopUp.module.scss
@@ -9,6 +9,10 @@
   justify-content: center;
 }
 
+.header__wrapper {
+  text-align: center;
+}
+
 .button__wrapper {
   padding-right: 20px;
   padding-left: 20px;
