--- a/scss/index.module.scss
+++ b/scss/index.module.scss
@@ -1,19 +1,14 @@
 @import "./colors.scss";
 
 .update__wrapper {
-  margin-right: -15%;
 }
 
 .delete__wrapper {
-  margin-left: -15%;
-  background-color: $red;
-  border-color: $red;
-}
+  margin-left: 0rem;
 
-.delete__wrapper:hover {
-  margin-left: -15%;
-  background-color: $dark-red;
-  border-color: $dark-red;
+  @media screen and (min-width: 992px) {
+    margin-left: 5rem;
+  }
 }
 
 .center__wrapper {
@@ -39,11 +34,16 @@
 
 .inner__card {
   width: 60%;
+  min-width: 50%;
   height: 80vh;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: visible;
   margin-top: 190px;
   background-color: white;
+
+  @media screen and (min-width: 992px) {
+    overflow-x: hidden;
+  }
 }
 .main__card {
   display: flex;
