added a small css fix

--- a/scss/index.module.scss
+++ b/scss/index.module.scss
@@ -1,8 +1,5 @@
 @import "./colors.scss";
 
-.update__wrapper {
-}
-
 .delete__wrapper {
   margin-left: 0rem;
 
@@ -49,6 +46,7 @@
   display: flex;
   justify-content: center;
   background-color: white;
+  margin-bottom: 5rem;
 }
 
 .tablehead__wrapper {
